.metadata/.plugins/org.eclipse.cdt.ui/T5_L24_ADCInjectedRegular.build.log
15:45:06 **** Build of configuration Debug for project T5_L24_ADCInjectedRegular ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:107:28: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
  107 |   HAL_ADC_Start_DMA(&hadc1,(uint32_t*)AdcRegular,2);
      |                            ^
../Core/Src/main.c: In function 'HAL_ADCEx_InjectedConvCpltCallback':
../Core/Src/main.c:190:15: error: 'i' undeclared (first use in this function)
  190 |   AdcInjected[i] = HAL_ADCEx_InjectedGetValue(&hadc1, ADC_INJECTED_RANK_1);
      |               ^
../Core/Src/main.c:190:15: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:49: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

15:45:07 Build Failed. 2 errors, 1 warnings. (took 941ms)

